--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   line-height: 1.6;
 }
 
@@ -41,11 +40,10 @@ p {
   text-transform: uppercase;
   text-decoration: none;
   transition: transform 250ms ease-in-out, opacity 250ms linear;
-  &:hover,
-  &:focus {
-    transform: scale(1.1);
-    opacity: 0.9;
-  }
+}
+.btn:hover, .btn:focus {
+  transform: scale(1.1);
+  opacity: 0.9;
 }
 
 .primary-title {
