:art: style(featured): Add featured section styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,10 +23,25 @@ p {
   margin: 0;
 }
 
+section {
+  padding: 7rem 0;
+}
+
 .container {
   width: 85%;
   max-width: 65rem;
   margin: 0 auto;
+}
+
+.split {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.split > * {
+  flex-basis: 30%;
+  min-width: 15rem;
 }
 
 /* 
@@ -75,6 +90,14 @@ p {
   text-transform: uppercase;
 }
 
+.section-title {
+  margin-bottom: 5rem;
+  text-align: center;
+  font-size: clamp(2.5rem, calc(5vw + 1rem), 4rem);
+  line-height: 1;
+  color: #17353d;
+}
+
 .hero {
   padding: 15rem 0;
   background: #222;
@@ -89,4 +112,46 @@ p {
     background-repeat: no-repeat;
     background-position: center center;
   }
+}
+
+.featured {
+  background: #eee;
+}
+.featured__item {
+  position: relative;
+  display: block;
+  transform: scale(0.85);
+  transition: transform 250ms ease-in-out;
+  text-align: center;
+  line-height: 1.2;
+  text-decoration: none;
+  color: #333;
+}
+.featured__item:hover, .featured__item:focus {
+  transform: scale(1);
+}
+.featured__item:hover .featured__details, .featured__item:focus .featured__details {
+  opacity: 1;
+  text-shadow: 0 0 2em white;
+}
+.featured__item::after {
+  content: "";
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  z-index: -1;
+  border-radius: 50%;
+  /* paddings in % are based on the width of its parent */
+  /* https://css-tricks.com/oh-hey-padding-percentage-is-based-on-the-parent-elements-width/ */
+  padding: 75% 75% 0 0;
+  background: #2193b0;
+}
+.featured__details {
+  opacity: 0;
+  transition: opacity 250ms linear;
+}
+.featured__details span {
+  display: block;
+  font-weight: 700;
+  font-size: 2.5rem;
 }
