--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -121,13 +121,13 @@ section {
   &__item {
     position: relative;
     display: block;
-    transform: scale(.85);
+    transform: scale(0.85);
     transition: transform 250ms ease-in-out;
     text-align: center;
     line-height: 1.2;
     text-decoration: none;
     color: #333;
-   
+
     &:hover,
     &:focus {
       transform: scale(1);
@@ -157,5 +157,23 @@ section {
       font-weight: 700;
       font-size: 2.5rem;
     }
+  }
+}
+
+// PRODUCT
+.product {
+  background: radial-gradient(
+    var(--clr-inner, limegreen),
+    var(--clr-outer, purple)
+  );
+  margin-bottom: 3rem;
+  padding: 3rem;
+  border-radius: 1rem;
+  text-align: center;
+  &__title {
+    font-size: 4rem;
+    line-height: 1.1;
+    color: #fff;
+    text-shadow: 0 0 .2em rgba(#000, .2);
   }
 }
