:art: style(queries): Add floats and shape-outside

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,16 +158,43 @@ section {
 
 .product {
   background: radial-gradient(var(--clr-inner, limegreen), var(--clr-outer, purple));
-  margin-bottom: 3rem;
-  padding: 3rem;
-  border-radius: 1rem;
+  margin-bottom: 5em;
+  padding: 3em;
+  border-radius: 1em;
   text-align: center;
 }
 .product__title {
   font-size: 4rem;
-  line-height: 1.1;
+  text-transform: uppercase;
+  line-height: 1;
   color: #fff;
   text-shadow: 0 0 0.2em rgba(0, 0, 0, 0.2);
+}
+.product__image {
+  margin: -5em 0 0 0;
+}
+@media (min-width: 45em) {
+  .product {
+    text-align: left;
+    margin-bottom: 9em;
+  }
+  .product__title {
+    font-size: clamp(3rem, calc(5vw + 1rem), 5.5rem);
+    margin: 0;
+  }
+  .product__image {
+    float: right;
+    width: 65%;
+    shape-outside: url(../img/shoe-1.png);
+    shape-margin: 1em;
+    margin: 0 -5em 0 0;
+  }
+  .product.shoe--left .product__image {
+    float: left;
+    shape-outside: url("../img/shoe-2.png");
+    margin: 0 0 0 -5em;
+    shape-margin: 2em;
+  }
 }
 
 .hero {
